Actualización de los controladores de vistas

--- a/co.edu.uniquindio.marketplace/src/main/resources/co/edu/uniquindio/marketplace/marketplace/agregarVendedor.fxml
+++ b/co.edu.uniquindio.marketplace/src/main/resources/co/edu/uniquindio/marketplace/marketplace/agregarVendedor.fxml
@@ -111,7 +111,7 @@
                      <graphic>
                         <ImageView fitHeight="35.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../../img/iconoSalida.png" />
+                              <Image url="@../../../../../img/proyecto/iconoSalida.png" />
                            </image>
                         </ImageView>
                      </graphic>
