--- a/co.edu.uniquindio.marketplace/src/main/resources/co/edu/uniquindio/marketplace/marketplace/agregarProducto.fxml
+++ b/co.edu.uniquindio.marketplace/src/main/resources/co/edu/uniquindio/marketplace/marketplace/agregarProducto.fxml
@@ -35,11 +35,11 @@
                                 <Font name="System Bold Italic" size="15.0" />
                             </font>
                         </Label>
-                        <TextField fx:id="txtID" layoutX="149.0" layoutY="83.0" prefHeight="26.0" prefWidth="162.0" promptText="ID " />
+                        <TextField fx:id="txtID" disable="true" layoutX="149.0" layoutY="83.0" prefHeight="26.0" prefWidth="162.0" promptText="ID " />
                         <TextField fx:id="txtNombre" layoutX="149.0" layoutY="133.0" prefHeight="26.0" prefWidth="162.0" promptText="Nombre del producto" />
                         <TextField fx:id="txtDescripcion" layoutX="149.0" layoutY="182.0" prefHeight="26.0" prefWidth="162.0" promptText="Una breve descripción" />
                         <Separator layoutX="-17.0" layoutY="296.0" prefHeight="10.0" prefWidth="946.0" />
-                        <Button fx:id="btnNuevo" layoutX="39.0" layoutY="319.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="131.0" style="-fx-background-color: #21a44f; -fx-text-fill: white;" text="Nuevo">
+                        <Button fx:id="btnNuevo" layoutX="39.0" layoutY="319.0" mnemonicParsing="false" onAction="#onNuevoProducto" prefHeight="31.0" prefWidth="131.0" style="-fx-background-color: #21a44f; -fx-text-fill: white;" text="Nuevo">
                             <font>
                                 <Font name="System Bold Italic" size="15.0" />
                             </font>
@@ -47,7 +47,7 @@
                                 <Cursor fx:constant="HAND" />
                             </cursor>
                         </Button>
-                        <Button fx:id="btnAgregar" layoutX="245.0" layoutY="319.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="131.0" style="-fx-background-color: #21a44f; -fx-text-fill: white;" text="Agregar">
+                        <Button fx:id="btnAgregar" layoutX="245.0" layoutY="319.0" mnemonicParsing="false" onAction="#onAgregarProducto" prefHeight="31.0" prefWidth="131.0" style="-fx-background-color: #21a44f; -fx-text-fill: white;" text="Agregar">
                             <font>
                                 <Font name="System Bold Italic" size="15.0" />
                             </font>
@@ -55,7 +55,7 @@
                                 <Cursor fx:constant="HAND" />
                             </cursor>
                         </Button>
-                        <Button fx:id="btnActualizar" layoutX="479.0" layoutY="319.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="131.0" style="-fx-background-color: #21a44f; -fx-text-fill: white;" text="Actualizar">
+                        <Button fx:id="btnActualizar" layoutX="479.0" layoutY="319.0" mnemonicParsing="false" onAction="#onActualizarProducto" prefHeight="31.0" prefWidth="131.0" style="-fx-background-color: #21a44f; -fx-text-fill: white;" text="Actualizar">
                             <font>
                                 <Font name="System Bold Italic" size="15.0" />
                             </font>
@@ -63,7 +63,7 @@
                                 <Cursor fx:constant="HAND" />
                             </cursor>
                         </Button>
-                        <Button fx:id="btnEliminar" layoutX="709.0" layoutY="319.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="131.0" style="-fx-background-color: #21a44f; -fx-text-fill: white;" text="Eliminar">
+                        <Button fx:id="btnEliminar" layoutX="709.0" layoutY="319.0" mnemonicParsing="false" onAction="#onEliminarProducto" prefHeight="31.0" prefWidth="131.0" style="-fx-background-color: #21a44f; -fx-text-fill: white;" text="Eliminar">
                             <font>
                                 <Font name="System Bold Italic" size="15.0" />
                             </font>
@@ -98,7 +98,7 @@
                      <cursor>
                         <Cursor fx:constant="DEFAULT" />
                      </cursor></ComboBox>
-                  <Button fx:id="btnAgregarImagen" layoutX="450.0" layoutY="213.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="162.0" style="-fx-background-color: #21a44f; -fx-text-fill: white;" text="Agregar Imagen">
+                  <Button fx:id="btnAgregarImagen" layoutX="450.0" layoutY="213.0" mnemonicParsing="false" onAction="#onAgregarImagen" prefHeight="26.0" prefWidth="162.0" style="-fx-background-color: #21a44f; -fx-text-fill: white;" text="Agregar Imagen">
                      <font>
                         <Font name="System Bold Italic" size="12.0" />
                      </font>
@@ -106,7 +106,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <ImageView fitHeight="189.0" fitWidth="244.0" layoutX="653.0" layoutY="82.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="previsualizarImagen" fitHeight="189.0" fitWidth="244.0" layoutX="709.0" layoutY="82.0" pickOnBounds="true" preserveRatio="true" />
                   <Label layoutX="362.0" layoutY="165.0" prefHeight="22.0" prefWidth="88.0" text="Estado:" textFill="#21a44f">
                      <font>
                         <Font name="System Bold Italic" size="15.0" />
